[version 0.1]
- fix makefile builds

[version 0.0]
- added base code (from another project) and changed namespace to fbcunit