@@ -1,9 +1,6 @@
 call c:\batch\setpath.bat FBWIN
 
-make DEBUG=1
-if ERRORLEVEL 1 goto DONE
-
-make DEBUG=1 tests
+make DEBUG=1 TARGET=win32
 if ERRORLEVEL 1 goto DONE
 
 :DONE
