@@ -1,3 +1,3 @@
 call c:\batch\setpath.bat FBWIN
 
-make DEBUG=1
+make DEBUG=1 TARGET=win32
