@@ -1,4 +1,5 @@
 [version 0.1]
+- add $(TARGET) variable to makefiles
 - fix makefile builds
 
 [version 0.0]
